# Agent-NN

./: .codex.json  .coverage  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  BenutzerHandbuch.html  CHANGELOG.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTEGRATION_GUIDE.md  Konsolidierung-und-Integration-redundanter-Implementierungen.md  README-smolitux-ui-integration.md  README.md  README.plugin.md  RELEASE.md  RELEASE_NOTES.html  REPAIR.sh  ROADMAP.md  ROADMAP_NEXT.md  Roadmap.md  TODO-Liste für Agent-NN Entwicklungsplan.md  VERSION  agent-ui@1.0.0build.md  agent_deployment.html  agentnn_devplan_todo.md  api.html  api_reference.html  architecture_overview.html  catalog.html  cli.html  cli_dev.html  cli_quickstart.html  codex-init.sh  codex.tasks.json  codex_research_notes.md  (+69 more)
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
BenutzerHandbuch/: Marketing-Agent.html  smolitux-ui.html  uebersicht.html
agent_profiles/: critic_agent.json  retriever_agent.json  writer_agent.json
agentnn/: __init__.py  __main__.py  config.yml
agents/: agent_communication.py  agent_creator.py  agent_factory.py  agent_generator.py  agent_improver.py  agentic_worker.py  api_tools.py  chatbot_agent.py  domain_knowledge.py  nn_worker_agent.py  supervisor_agent.py  web_crawler_agent.py  web_scraper_agent.py  worker_agent.py
api/: advanced_endpoints.html  advanced_endpoints.py  agent_registry.html  api_reference.html  api_server.py  chat.html  client.py  dispatcher.html  endpoints.py  errors.html  flowise_bridge.py  llm_gateway.html  models.py  openapi-overview.html  plugin_agent.html  server.py  session_manager.html  smolitux_integration.py  vector_store.html  worker_services.html
api_gateway/: connectors.py  main.py
architecture/: Code-Dokumentation.html  access_control.html  agent_bus.html  agent_evolution.html  agent_levels.html  agent_memory.html  agent_missions.html  agent_profiles.html  agent_teams.html  analysis.html  audit_logging.html  coalitions.html  delegation_model.html  dispatch_queue.html  dynamic_roles.html  extensibility.html  federation.html  feedback.html  feedback_loop.html  governance.html  identity_and_signatures.html  mcp_components.html  mcp_dataflow.html  mcp_stabilisierung.html  multi_agent.html  overview.html  overview_mcp.html  plugin_architecture.html  privacy_model.html  reputation_system.html  resource_model.html  role_capabilities.html  skill_system.html  system_architecture.html  token_budgeting.html  training_paths.html  trust_network.html  voting_logic.html  ÜberblickSystemarchitektur.html
benchmarks/: performance_benchmarks.py
ci/: lint_test.sh  setup_env.sh
cli/: CLI-Dokumentation.html  README.md  agent-nn_cli.py  agent_nn_cli.py  agentctl.py  batch_processor.py  cli_app.py  cli_reference.html  core.py  llm_manager_cli.py  main.py  performance_monitor.py  session_runner.py  smolit_cli.py  unified_cli.py
config/: __init__.py  llm_config.py  llm_config.yaml  services.yaml  smolitux_config.py
core/: __init__.py  access_control.py  agent_bus.py  agent_evolution.py  agent_profile.py  audit.py  audit_log.py  auth_utils.py  auto_trainer.py  coalitions.py  config.py  crypto.py  delegation.py  dispatch_queue.py  feedback_loop.py  feedback_utils.py  governance.py  level_evaluator.py  levels.py  logging_utils.py  matching_engine.py  memory_store.py  metrics_utils.py  mission_prompts.py  missions.py  model_context.py  privacy.py  privacy_filter.py  reputation.py  rewards.py  role_capabilities.py  roles.py  run_service.py  schemas.py  self_reflection.py  session_store.py  skill_matcher.py  skills.py  team_knowledge.py  teams.py  (+5 more)
datastores/: vector_store.py  worker_agent_db.py
deployment/: cloud.html  docker.html  kubernetes.html  storage.html
development/: api_overview.html  cicd.html  cli_usage.html  contributing.html  model_tracking.html  nxlv-python.html  plugins.html  sdk_usage.html  services.html  setup.html  smolitux-ui-dev.html
docs/: CHANGELOG.md  RELEASE_NOTES.md  agent_deployment.md  api_reference.md  architecture_overview.md  catalog.md  cli.md  cli_dev.md  cli_quickstart.md  config_reference.md  context_map.md  deployment.md  dev_managers.md  dev_setup.md  developer_setup.md  errors.md  flowise_nodes.md  flowise_plugin.md  flowisehub_publish.md  frontend_bridge.md  frontend_ux_checklist.md  index.html  index.md  install.md  llm_provider_overview.md  maintenance.md  mcp.md  metrics_reference.md  metrics_snapshot.md  migration_status.md  models.md  orchestrator.md  overview.md  package-lock.json  package.json  (+16 more)
(+6138 files in other folders)
