[project]
name = "agentnn"
version = "1.0.0"
description = "Modular agent execution and neural orchestration framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "httpx",
  "typer",
  "pydantic-settings",
  "pydantic",
  "PyYAML",
  "tqdm",
  "uvicorn",
  "slowapi",
  "aiofiles",
  "prometheus-client",
  "loguru",
  "python-json-logger",
  "aiohttp",
  "structlog",
  "cryptography",
  "mlflow"
]



[tool.ruff]
line-length = 120
extend-exclude = [
  "archive",
  "agents",
  "api",
  "cli",
  "openhands_api",
  "llm_models",
  "nn_models",
  "managers",
  "plugins",
  "training",
  "datastores",
  "monitoring",
  "evaluation",
  "security",
  "rag",
  "mlflow_integration",
  "tests",
  "scripts",
  "benchmarks",
  "frontend",
  "docs",
]

[project.optional-dependencies]
sdk = []


[tool.poetry]
name = "agent-nn"
version = "1.0.0"
description = "Agent-NN CLI and MCP system"
authors = ["OpenHands <openhands@all-hands.dev>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "agentnn" },
  { include = "sdk" },
  { include = "mcp" }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9"
rich = "^13.0"
prompt-toolkit = "^3.0"
transformers = "^4.0"
torch = "^2.0"
sentence-transformers = "^2.2"
langchain = "^0.1"
mlflow = "^2.3"
datasets = "^2.0"
pydantic = "^2.0"
aiohttp = "^3.8"
openai = "^1.0"
httpx = "^0.25"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.4"
mypy = "^1.0"
pre-commit = "^3.0"

[tool.poetry.extras]
sdk = []

[tool.poetry.scripts]
agentnn = "sdk.cli.main:app"
mcp_cli = "mcp.cli:app"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
