[project]
name = "agentnn"
version = "1.0.0"
description = "Modular agent execution and neural orchestration framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "httpx",
  "typer",
  "pydantic-settings",
  "pydantic",
  "PyYAML",
  "tqdm",
  "uvicorn",
  "slowapi",
  "aiofiles",
  "prometheus-client",
  "loguru",
  "python-json-logger",
  "aiohttp",
  "structlog",
  "cryptography",
  "mlflow"
]



[tool.ruff]
line-length = 120
ignore = ["E402"]
extend-exclude = [
  "archive",
  "agents",
  "api",
  "cli",
  "openhands_api",
  "llm_models",
  "nn_models",
  "managers",
  "plugins",
  "training",
  "datastores",
  "monitoring",
  "evaluation",
  "security",
  "rag",
  "mlflow_integration",
  "tests",
  "scripts",
  "benchmarks",
  "frontend",
  "docs",
]

[project.optional-dependencies]
sdk = []


[tool.poetry]
name = "agentnn"
version = "1.0.0"
description = "Modular agent execution and neural orchestration framework"
authors = ["OpenHands <openhands@all-hands.dev>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "agentnn" },
  { include = "sdk" },
  { include = "mcp" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "*"
httpx = "*"
typer = "*"
pydantic-settings = "*"
pydantic = "*"
PyYAML = "*"
tqdm = "*"
uvicorn = "*"
slowapi = "*"
aiofiles = "*"
prometheus-client = "*"
loguru = "*"
python-json-logger = "*"
aiohttp = "*"
structlog = "*"
cryptography = "*"
mlflow = "*"
openai = "*"
transformers = "*"
torch = "*"
scikit-learn = "*"

[tool.poetry.extras]
sdk = []

[tool.poetry.scripts]
agentnn = "sdk.cli.main:app"
mcp_cli = "mcp.cli:app"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
